Put evacuation failure string directly into gc=info log message

XMLWordPrintable

    • gc
    • b06

      Currently with G1, on evacuation failure we get the following two messages:

      Pause Young (Normal) (G1 Evacuation Pause)
      To-space exhausted

      It is easier to read and less wasteful with space if evacuation failure info were put directly into the gc+info message, e.g.

      Pause Young (Normal) (Evacuation Failure) (G1 Evacuation Pause)

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: