8269022: Put evacuation failure string directly into gc=info log message

Reviewed-by: iwalulya, lkorinth, kbarrett